<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App title. [CHAR LIMIT=NONE] -->
    <string name="app_name">World History Quiz</string>

    <!-- Xml Strings-->
    <!-- Title. [CHAR LIMIT=NONE] -->
    <string name="title">World History\nQuiz</string>
    <!-- Name EditText. [CHAR LIMIT=NONE] -->
    <string name="nameHint">Please Enter Your Name</string>
    <!-- Remember username CheckBox. [CHAR LIMIT=NONE] -->
    <string name="rememberUser">Remember username?</string>
    <!-- Score. [CHAR LIMIT=NONE] -->
    <string name="score">Score:</string>
    <string name="scoreValue">0</string>
    <!-- Question one. [CHAR LIMIT=NONE] -->
    <string name="questionTitle1">Question 1 of 10:</string>
    <string name="question1">An early form of writing developed by the Sumerians was called:</string>
    <string name="answer1a">A) Sanskrit</string>
    <string name="answer1b">B) Cuneiform</string>
    <string name="answer1c">C) Indus</string>
    <string name="answer1d">D) Elamite</string>
    <!-- Question two. [CHAR LIMIT=NONE] -->
    <string name="questionTitle2">Question 2 of 10:</string>
    <string name="question2">The first Olympic Games in 776 BC, were held in what Greek city?</string>
    <string name="answer2a">A) Athens</string>
    <string name="answer2b">B) Corinth</string>
    <string name="answer2c">C) Olympia</string>
    <string name="answer2d">D) Thebes</string>
    <!-- Question three. [CHAR LIMIT=NONE] -->
    <string name="questionTitle3">Question 3 of 10:</string>
    <string name="question3">The Great Pyramid, Egypt\'s largest pyramid, is located where?</string>
    <string name="answer3a">A) Giza</string>
    <string name="answer3b">B) Dahshur</string>
    <string name="answer3c">C) Lisht</string>
    <string name="answer3d">D) Nuri</string>
    <!-- Question four. [CHAR LIMIT=NONE] -->
    <string name="questionTitle4">Question 4 of 10:</string>
    <string name="question4">Which two cities were destroyed in the Mount Vesuvius eruption of AD 79?</string>
    <string name="answer4a">A) Herculaneum</string>
    <string name="answer4b">B) Misenum</string>
    <string name="answer4c">C) Pompeii</string>
    <string name="answer4d">D) Neapolis</string>
    <!-- Question five. [CHAR LIMIT=NONE] -->
    <string name="questionTitle5">Question 5 of 10:</string>
    <string name="question5">What was the Colosseum in Rome originally used for?</string>
    <string name="answer5a">A) Housing</string>
    <string name="answer5b">B) Entertainment</string>
    <string name="answer5c">C) Workshops</string>
    <string name="answer5d">D) Fortress</string>
    <!-- Question six. [CHAR LIMIT=NONE] -->
    <string name="questionTitle6">Question 6 of 10:</string>
    <string name="question6">Which two were invented in China?</string>
    <string name="answer6a">A) Compass</string>
    <string name="answer6b">B) Eyeglasses</string>
    <string name="answer6c">C) Windmill</string>
    <string name="answer6d">D) Gunpowder</string>
    <!-- Question seven. [CHAR LIMIT=NONE] -->
    <string name="questionTitle7">Question 7 of 10:</string>
    <string name="question7">Vikings created a settlement called Vinland in 986. It was at present-day:</string>
    <string name="answer7a">A) Newfoundland</string>
    <string name="answer7b">B) Maine</string>
    <string name="answer7c">C) Greenland</string>
    <string name="answer7d">D) Iceland</string>
    <!-- Question eight. [CHAR LIMIT=NONE] -->
    <string name="questionTitle8">Question 8 of 10:</string>
    <string name="question8">Where did Napolean\'s final defeat take place?</string>
    <string name="answerHint">Answer</string>
    <!-- Question nine. [CHAR LIMIT=NONE] -->
    <string name="questionTitle9">Question 9 of 10:</string>
    <string name="question9">In World War 1, which country was a member of the Central Powers?</string>
    <string name="answer9a">A) Japan</string>
    <string name="answer9b">B) Italy</string>
    <string name="answer9c">C) Germany</string>
    <string name="answer9d">D) England</string>
    <!-- Question ten. [CHAR LIMIT=NONE] -->
    <string name="questionTitle10">Question 10 of 10:</string>
    <string name="question10">What country did the Bay of Pigs invasion take place in?</string>
    <string name="answer10a">A) France</string>
    <string name="answer10b">B) Brazil</string>
    <string name="answer10c">C) Canada</string>
    <string name="answer10d">D) Cuba</string>
    <!-- Results page. [CHAR LIMIT=NONE] -->
    <string name="resultsTitle">Results:</string>
    <string name="progessPercent">25%</string>
    <string name="fillerText">This is filler text.</string>
    <!-- Buttons. [CHAR LIMIT=10] -->
    <string name="beginButton">Begin</string>
    <string name="submitButton">Submit</string>
    <string name="shareButton">Share</string>
    <string name="retryButton">Retry</string>

    <!-- Java Strings-->
    <!-- Good luck toast. It will be shown in the format of "Good luck, Bob." where Bob is the user's name. [CHAR LIMIT=NONE] -->
    <string name="scoreInfo">Scoring:%nQuestions with one answer = 1 point%nQuestions with two answers = 2 points%nQuestions with text entry = 3 points%n%nGood luck, <xliff:g example="Bob" id="person">%s</xliff:g>.</string>
    <!-- Good luck toast when retrying quiz. It will be shown in the format of "Good luck, Bob." where Bob is the user's name. [CHAR LIMIT=NONE] -->
    <string name="luckRetry">Good luck, <xliff:g example="Bob" id="person">%s</xliff:g>.</string>
    <!-- No name entered toast. [CHAR LIMIT=NONE] -->
    <string name="enterName">Please Enter Your Name.</string>
    <!-- Result toast message. It will be shown in the format of "You scored 14 out of 14 points." where 14 is the number correct. [CHAR LIMIT=NONE] -->
    <string name="resultToast">You scored <xliff:g example="14" id="score">%d</xliff:g> out of 14 points.</string>
    <!-- Result message. It will be shown in the format of "Outstanding, Bob!" where Bob is the user's name. [CHAR LIMIT=NONE] -->
    <string name="outstanding">Outstanding, <xliff:g example="Bob" id="person">%s</xliff:g>!</string>
    <string name="good">Good job, <xliff:g example="Bob" id="person">%s</xliff:g>!</string>
    <string name="ok">You did OK, <xliff:g example="Bob" id="person">%s</xliff:g>.</string>
    <string name="notGood">Not so good, <xliff:g example="Bob" id="person">%s</xliff:g>.</string>
    <!-- Percent message. It will be shown in the format of "100%" where 100 is percentage correct. [CHAR LIMIT=10] -->
    <string name="percentCorrect"><xliff:g example="100" id="result">%d</xliff:g>%%</string>
    <!-- Number correct message. It will be shown in the format of "14 out of 14 points." where 14 is the number correct. [CHAR LIMIT=NONE] -->
    <string name="numberCorrect"><xliff:g example="14" id="points">%d</xliff:g> out of 14 points.</string>
    <!-- Intent share message. [CHAR LIMIT=NONE] -->
    <string name="shareMessage">On The World History Quiz, I scored\u0020</string>
    <!-- Disabled back button toast. [CHAR LIMIT=NONE] -->
    <string name="noBack">No need to go back.</string>
    <!-- No answer selected toast. [CHAR LIMIT=NONE] -->
    <string name="selectAnswer">Please select an answer.</string>
    <!-- Select two answers toast for checkboxes. [CHAR LIMIT=NONE] -->
    <string name="twoAnswers">Please select two answers.</string>
    <!-- No answer entered toast for EditText. [CHAR LIMIT=NONE] -->
    <string name="enterAnswer">Please enter an answer.</string>
    <!-- Correct answer toast. [CHAR LIMIT=NONE] -->
    <string name="correct">Correct!</string>
    <!-- Wrong answer toast. [CHAR LIMIT=NONE] -->
    <!-- Question one. -->
    <string name="oneWrong">Wrong, B.</string>
    <!-- Question two. -->
    <string name="twoWrong">Wrong, C.</string>
    <!-- Question three. -->
    <string name="threeWrong">Wrong, A.</string>
    <!-- Question four. -->
    <string name="fourWrong"><![CDATA[Wrong, A & C.]]></string>
    <!-- Question five. -->
    <string name="fiveWrong">Wrong, B.</string>
    <!-- Question six. -->
    <string name="sixWrong"><![CDATA[Wrong, A & D.]]></string>
    <!-- Question seven. -->
    <string name="sevenWrong">Wrong, A.</string>
    <!-- Question eight. -->
    <string name="eightWrong">Wrong, Waterloo.</string>
    <!-- Question nine. -->
    <string name="nineWrong">Wrong, C.</string>
    <!-- Question ten. -->
    <string name="tenWrong">Wrong, D.</string>
    <!-- Question eight answer. [CHAR LIMIT=NONE] -->
    <string name="eightAnswer">Waterloo</string>
    <string name="eightAltAnswer">waterloo</string>
</resources>

