<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/questionTitle4" />

            <TextView
                style="@style/Question"
                android:text="@string/question4" />

            <CheckBox
                android:id="@+id/q4a"
                style="@style/AnswerTop"
                android:text="@string/answer4a" />

            <CheckBox
                android:id="@+id/q4b"
                style="@style/Answer"
                android:text="@string/answer4b" />

            <CheckBox
                android:id="@+id/q4c"
                style="@style/Answer"
                android:text="@string/answer4c" />

            <CheckBox
                android:id="@+id/q4d"
                style="@style/Answer"
                android:text="@string/answer4d" />

        </LinearLayout>

        <Button
            android:id="@+id/submitQ4"
            style="@style/SubmitButton"
            android:onClick="setQ4"
            android:text="@string/submitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>