<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/questionTitle6" />

            <TextView
                style="@style/Question"
                android:text="@string/question6" />

            <CheckBox
                android:id="@+id/q6a"
                style="@style/AnswerTop"
                android:text="@string/answer6a" />

            <CheckBox
                android:id="@+id/q6b"
                style="@style/Answer"
                android:text="@string/answer6b" />

            <CheckBox
                android:id="@+id/q6c"
                style="@style/Answer"
                android:text="@string/answer6c" />

            <CheckBox
                android:id="@+id/q6d"
                style="@style/Answer"
                android:text="@string/answer6d" />

        </LinearLayout>

        <Button
            android:id="@+id/submitQ6"
            style="@style/SubmitButton"
            android:onClick="setQ6"
            android:text="@string/submitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>