<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/questionTitle9" />

            <TextView
                style="@style/Question"
                android:text="@string/question9" />

            <RadioGroup
                android:id="@+id/q9"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/q9a"
                    style="@style/AnswerTop"
                    android:text="@string/answer9a" />

                <RadioButton
                    android:id="@+id/q9b"
                    style="@style/Answer"
                    android:text="@string/answer9b" />

                <RadioButton
                    android:id="@+id/q9c"
                    style="@style/Answer"
                    android:text="@string/answer9c" />

                <RadioButton
                    android:id="@+id/q9d"
                    style="@style/Answer"
                    android:text="@string/answer9d" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submitQ9"
            style="@style/SubmitButton"
            android:onClick="setQ9"
            android:text="@string/submitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>