<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                android:text="@string/questionTitle1"
                style="@style/QuestionTitle" />

            <TextView
                android:text="@string/question1"
                style="@style/Question" />

            <RadioGroup
                android:id="@+id/q1"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/q1a"
                    android:text="@string/answer1a"
                    style="@style/AnswerTop" />

                <RadioButton
                    android:id="@+id/q1b"
                    android:text="@string/answer1b"
                    style="@style/Answer" />

                <RadioButton
                    android:id="@+id/q1c"
                    android:text="@string/answer1c"
                    style="@style/Answer" />

                <RadioButton
                    android:id="@+id/q1d"
                    android:text="@string/answer1d"
                    style="@style/Answer" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submitQ1"
            android:onClick="setQ1"
            android:text="@string/submitButton"
            style="@style/SubmitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>