<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/questionTitle3" />

            <TextView
                style="@style/Question"
                android:text="@string/question3" />

            <RadioGroup
                android:id="@+id/q3"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/q3a"
                    style="@style/AnswerTop"
                    android:text="@string/answer3a" />

                <RadioButton
                    android:id="@+id/q3b"
                    style="@style/Answer"
                    android:text="@string/answer3b" />

                <RadioButton
                    android:id="@+id/q3c"
                    style="@style/Answer"
                    android:text="@string/answer3c" />

                <RadioButton
                    android:id="@+id/q3d"
                    style="@style/Answer"
                    android:text="@string/answer3d" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submitQ3"
            style="@style/SubmitButton"
            android:onClick="setQ3"
            android:text="@string/submitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>