<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/questionTitle10" />

            <TextView
                style="@style/Question"
                android:text="@string/question10" />

            <RadioGroup
                android:id="@+id/q10"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/q10a"
                    style="@style/AnswerTop"
                    android:text="@string/answer10a" />

                <RadioButton
                    android:id="@+id/q10b"
                    style="@style/Answer"
                    android:text="@string/answer10b" />

                <RadioButton
                    android:id="@+id/q10c"
                    style="@style/Answer"
                    android:text="@string/answer10c" />

                <RadioButton
                    android:id="@+id/q10d"
                    style="@style/Answer"
                    android:text="@string/answer10d" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submitQ10"
            style="@style/SubmitButton"
            android:onClick="setQ10"
            android:text="@string/submitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>