<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/QuestionLayout">

    <android.support.v7.widget.CardView
        style="@style/QuestionCard"
        card_view:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout style="@style/CardLayout">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/questionTitle8" />

            <TextView
                style="@style/Question"
                android:text="@string/question8" />

        </LinearLayout>

        <EditText
            android:id="@+id/q8answer"
            android:layout_width="@dimen/textAnswerWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/textAnswerBottom"
            android:hint="@string/answerHint"
            android:inputType="textCapWords"
            android:textColor="@color/answerColor" />

        <Button
            android:id="@+id/submitQ8"
            style="@style/SubmitButton"
            android:onClick="setQ8"
            android:text="@string/submitButton" />

    </android.support.v7.widget.CardView>
</LinearLayout>